Placing tower by clicking on the map is now working

--- a/index.html
+++ b/index.html
@@ -23,21 +23,22 @@
             <script src="js/core/World.js"></script>
             <script src="js/core/Entity.js"></script>
             <script src="js/core/Component.js"></script>
-            <script src="js/core/EntityProcessingComponent.js"></script>
+            <script src="js/core/EntityProcessingSystem.js"></script>
+            <script src="js/core/VoidProcessingSystem.js"></script>
         <!-- /CORE -->
 
         <!-- COMPONENTS -->
             <script src="js/components/DeadEntityComponent.js"></script>
             <script src="js/components/PositionComponent.js"></script>
-            <script src="js/components/DrawingComponent.js"></script>
-            <script src="js/components/DrawingMapComponent.js"></script>
+            <script src="js/components/DrawComponent.js"></script>
             <script src="js/components/SizeComponent.js"></script>
             <script src="js/components/MouseClickComponent.js"></script>
         <!-- /COMPONENTS -->
 
         <!-- SYSTEMS -->
             <script src="js/systems/DeadEntitySystem.js"></script>
-            <script src="js/systems/DrawingMapSystem.js"></script>
+            <script src="js/systems/DrawSystem.js"></script>
+            <script src="js/systems/DrawMapSystem.js"></script>
             <script src="js/systems/MouseClickSystem.js"></script>
         <!-- /SYSTEMS -->
 
