Placing tower and shooting bullet

--- a/index.html
+++ b/index.html
@@ -23,23 +23,34 @@
             <script src="js/core/World.js"></script>
             <script src="js/core/Entity.js"></script>
             <script src="js/core/Component.js"></script>
+            <script src="js/core/System.js"></script>
             <script src="js/core/EntityProcessingSystem.js"></script>
             <script src="js/core/VoidProcessingSystem.js"></script>
+            <script src="js/core/DelayedEntityProcessingSystem.js"></script>
         <!-- /CORE -->
 
         <!-- COMPONENTS -->
             <script src="js/components/DeadEntityComponent.js"></script>
             <script src="js/components/PositionComponent.js"></script>
             <script src="js/components/DrawComponent.js"></script>
+            <script src="js/components/DrawTowerComponent.js"></script>
             <script src="js/components/SizeComponent.js"></script>
             <script src="js/components/MouseClickComponent.js"></script>
+            <script src="js/components/TimeToLiveComponent.js"></script>
+            <script src="js/components/VelocityComponent.js"></script>
+            <script src="js/components/AimingComponent.js"></script>
+            <script src="js/components/SpeedComponent.js"></script>
+            <script src="js/components/DrawBulletComponent.js"></script>
         <!-- /COMPONENTS -->
 
         <!-- SYSTEMS -->
             <script src="js/systems/DeadEntitySystem.js"></script>
-            <script src="js/systems/DrawSystem.js"></script>
+            <script src="js/systems/DrawTowerSystem.js"></script>
+            <script src="js/systems/DrawBulletSystem.js"></script>
             <script src="js/systems/DrawMapSystem.js"></script>
             <script src="js/systems/MouseClickSystem.js"></script>
+            <script src="js/systems/TimeToLiveSystem.js"></script>
+            <script src="js/systems/MovingBulletSystem.js"></script>
         <!-- /SYSTEMS -->
 
         <!-- FACTORIES -->
