--- a/tests/tests.html
+++ b/tests/tests.html
@@ -9,6 +9,10 @@
 		<div id="qunit"></div>
 		<div id="qunit-fixture"></div>
 
+        <!-- GAME -->
+            <script src="../js/game/Data.js"></script>
+        <!-- /GAME -->
+
         <!-- LIBRARIES -->
             <script src="libs/jquery/jquery.min.js"></script>
             <script src="libs/qunit/js/qunit.js"></script>
@@ -18,13 +22,16 @@
             <script src="../js/core/World.js"></script>
             <script src="../js/core/Entity.js"></script>
             <script src="../js/core/Component.js"></script>
+            <script src="../js/core/System.js"></script>
             <script src="../js/core/EntityProcessingSystem.js"></script>
+            <script src="../js/core/DelayedEntityProcessingSystem.js"></script>
         <!-- /CORE -->
 
         <!-- COMPONENTS -->
             <script src="../js/components/DeadEntityComponent.js"></script>
             <script src="../js/components/PositionComponent.js"></script>
             <script src="../js/components/DrawComponent.js"></script>
+            <script src="../js/components/DrawTowerComponent.js"></script>
             <script src="../js/components/SizeComponent.js"></script>
             <script src="../js/components/MouseClickComponent.js"></script>
 
