Adding test for System

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -49,6 +49,7 @@
             <script src="core/_World.js"></script>
             <script src="core/_Entity.js"></script>
             <script src="core/_EntityFactory.js"></script>
+            <script src="core/_System.js"></script>
             <script src="entities/_Map.js"></script>
         <!-- /TESTS -->
 
