starting targeting foes

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -25,6 +25,7 @@
             <script src="../js/core/System.js"></script>
             <script src="../js/core/EntityProcessingSystem.js"></script>
             <script src="../js/core/DelayedEntityProcessingSystem.js"></script>
+            <script src="../js/core/VoidEntitySystem.js"></script>
         <!-- /CORE -->
 
         <!-- COMPONENTS -->
@@ -32,8 +33,14 @@
             <script src="../js/components/PositionComponent.js"></script>
             <script src="../js/components/DrawComponent.js"></script>
             <script src="../js/components/DrawTowerComponent.js"></script>
+            <script src="../js/components/DrawFoeComponent.js"></script>
+            <script src="../js/components/FiringRateComponent.js"></script>
             <script src="../js/components/SizeComponent.js"></script>
             <script src="../js/components/MouseClickComponent.js"></script>
+            <script src="../js/components/AimingComponent.js"></script>
+            <script src="../js/components/SpeedComponent.js"></script>
+            <script src="../js/components/VelocityComponent.js"></script>
+            <script src="../js/components/TimeToLiveComponent.js"></script>
 
         <!-- /COMPONENTS -->
 
