Shooting on enemy with perception radius. Trouble with foe display and bullet orientation.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             <script src="js/components/DrawBulletComponent.js"></script>
             <script src="js/components/FiringRateComponent.js"></script>
             <script src="js/components/PerceptionComponent.js"></script>
+            <script src="js/components/ReferrerComponent.js"></script>
+            <script src="js/components/CircleCollisionComponent.js"></script>
         <!-- /COMPONENTS -->
 
         <!-- SYSTEMS -->
@@ -54,7 +56,7 @@
             <script src="js/systems/DrawMapSystem.js"></script>
             <script src="js/systems/MouseClickSystem.js"></script>
             <script src="js/systems/TimeToLiveSystem.js"></script>
-            <script src="js/systems/MovingBulletSystem.js"></script>
+            <script src="js/systems/MovingSystem.js"></script>
             <script src="js/systems/SpawnFoeSystem.js"></script>
             <script src="js/systems/ShootingSystem.js"></script>
             <script src="js/systems/PerceptionSystem.js"></script>
