--- a/tests/tests.html
+++ b/tests/tests.html
@@ -41,6 +41,7 @@
             <script src="../js/components/SpeedComponent.js"></script>
             <script src="../js/components/VelocityComponent.js"></script>
             <script src="../js/components/TimeToLiveComponent.js"></script>
+            <script src="../js/components/PerceptionComponent.js"></script>
 
         <!-- /COMPONENTS -->
 
@@ -59,6 +60,10 @@
             <script src="core/_System.js"></script>
             <script src="entities/_Map.js"></script>
         <!-- /TESTS -->
+
+        <!-- GAME -->
+            <script src="../js/game/TDDTowerDefenseWorld.js"></script>
+        <!-- /GAME -->
 
 	</body>
 </html>
