Can aim and kill foes. Trouble with aiming when dead foes. Trouble with perfs too?

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -34,6 +34,8 @@
             <script src="../js/components/DrawComponent.js"></script>
             <script src="../js/components/DrawTowerComponent.js"></script>
             <script src="../js/components/DrawFoeComponent.js"></script>
+            <script src="../js/components/DrawDebugComponent.js"></script>
+            <script src="../js/components/ReferrerComponent.js"></script>
             <script src="../js/components/FiringRateComponent.js"></script>
             <script src="../js/components/SizeComponent.js"></script>
             <script src="../js/components/MouseClickComponent.js"></script>
@@ -42,6 +44,7 @@
             <script src="../js/components/VelocityComponent.js"></script>
             <script src="../js/components/TimeToLiveComponent.js"></script>
             <script src="../js/components/PerceptionComponent.js"></script>
+            <script src="../js/components/LifeComponent.js"></script>
 
         <!-- /COMPONENTS -->
 
