--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 	</head>
 	<body>
 		<h1 class="text-center threedee">TDDTowerDefense</h1>
+
+        <div>
+            <button onclick="TDDTowerDefense.play()">Play</button>
+            <button onclick="TDDTowerDefense.pause()">Pause</button>
+        </div>
+
 		<canvas id="canvas">
-            Your browser dosen't support the HTML5 canvas.
+            Your browser doesn't support the HTML5 canvas.
 		</canvas>
 
         <!-- GAME -->
@@ -33,6 +39,7 @@
             <script src="js/components/DeadEntityComponent.js"></script>
             <script src="js/components/PositionComponent.js"></script>
             <script src="js/components/DrawComponent.js"></script>
+            <script src="js/components/DrawDebugComponent.js"></script>
             <script src="js/components/DrawTowerComponent.js"></script>
             <script src="js/components/DrawFoeComponent.js"></script>
             <script src="js/components/SizeComponent.js"></script>
@@ -46,6 +53,8 @@
             <script src="js/components/PerceptionComponent.js"></script>
             <script src="js/components/ReferrerComponent.js"></script>
             <script src="js/components/CircleCollisionComponent.js"></script>
+            <script src="js/components/LifeComponent.js"></script>
+            <script src="js/components/BulletPowerComponent.js"></script>
         <!-- /COMPONENTS -->
 
         <!-- SYSTEMS -->
@@ -53,6 +62,8 @@
             <script src="js/systems/DrawTowerSystem.js"></script>
             <script src="js/systems/DrawBulletSystem.js"></script>
             <script src="js/systems/DrawFoeSystem.js"></script>
+            <script src="js/systems/DrawFoeSystem.js"></script>
+            <script src="js/systems/DrawDebugSystem.js"></script>
             <script src="js/systems/DrawMapSystem.js"></script>
             <script src="js/systems/MouseClickSystem.js"></script>
             <script src="js/systems/TimeToLiveSystem.js"></script>
@@ -60,6 +71,7 @@
             <script src="js/systems/SpawnFoeSystem.js"></script>
             <script src="js/systems/ShootingSystem.js"></script>
             <script src="js/systems/PerceptionSystem.js"></script>
+            <script src="js/systems/DrawLifeSystem.js"></script>
         <!-- /SYSTEMS -->
 
         <!-- FACTORIES -->
